--- a/scss/_mainDesktop.scss
+++ b/scss/_mainDesktop.scss
@@ -28,6 +28,7 @@ main {
 
 
 .inicio-imagen .contenedor {
+    display: flex;
     height: 100%;
     width: 100%;
     opacity: 0.88;
@@ -56,6 +57,7 @@ main {
 }
 
 .imagen-sobre-nosotros .contenedor {
+    display: flex;
     height: 100%;
     width: 100%;
 
@@ -87,7 +89,7 @@ main {
 }
 
 .multimedia {
-    margin-top: 130px;
+    margin-top: 10px;
     height: 700px;
 }
 
@@ -96,16 +98,17 @@ main {
     flex-wrap: wrap;
     align-items: flex-start;
     flex-direction: row;
-    max-height: 250px;
-    margin-top: 30px;
-    margin-left: 110px;
+    max-height: 400px;
+    margin-top: 180px;
+   
+   
 }
 
 .cards img {
     margin: 10px;
     border: 3px solid rgb(127, 183, 126);
     box-shadow: 3px 3px 8px 0px rgba(0, 0, 0, 0.3);
-    max-width: 250px;
+    max-width: 300px;
 }
 
 
